# sams_hash_function

./: LICENSE  README.md  pyproject.toml
shf/: __init__.py  _builtins.py  datetime.py  main.py  util.py
